# cpp2dGame

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assets/config/: launch.ini
src/: main.cpp
